--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,9 @@ body {
     font-size: 26px;
     line-height: 1.19;
     text-decoration: none;
+    letter-spacing: 0.03em;
+    margin: 25px;
+    margin-right: 93px;
 }
 .web-color1 {
     color: var(--brand-color);
@@ -34,7 +37,8 @@ body {
     color: var(--main-text-color);
     font-weight: 500;
     line-height: 1.14;
-    text-decoration: none
+    text-decoration: none;
+    letter-spacing: 0.02em;
 }
 .navigations a:hover,
 .navigations a:focus {
@@ -52,12 +56,16 @@ body {
 }
 .first-heading-box {
     background-color: #2F303A;
+    width: 1600px;
+    height: 600px;
 }
 .main-heading {
     font-weight: 900;
     font-size: 44px;
     line-height: 1.36;
     color: var(--negative-color);
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
 }
 .service-button {
     font-weight: 700;
@@ -66,6 +74,8 @@ body {
     border: none;
     background-color: var(--brand-color);
     color: var(--negative-color);
+    border-radius: 4px;
+    letter-spacing: 0.06em;
 }
 .service-button:hover,
 .service-button:focus {
@@ -87,22 +97,41 @@ body {
     font-weight: 700;
     font-size: 36px;
     line-height: 1.16;
+    text-align: center;
+    letter-spacing: 0.03em;
+}
+.index-images {
+    list-style-type: none;
 }
 .team-box {
     background-color: #F5F4FA;
+    text-align: center;
+    width: 1600px;
+    height: 648px;
 }
 .team-images {
     list-style-type: none;
+}
+.team-image {
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+    background-color: var(--negative-color) ;
 }
 .team-images b{
     font-weight: 500;
     font-size: 16px;
     line-height: 1.18;
+    text-align: center;
+    letter-spacing: 0.03em;
+    width: 72px;
 }
+
 .team-images span{
     font-size: 16px;
     line-height: 1.18;
     color: var(--secondary-text-color);
+    text-align: center;
+    letter-spacing: 0.03em;
 }
 .buttons {
     list-style-type: none;
@@ -124,6 +153,11 @@ body {
 }
 .images {
     list-style-type: none;
+}
+.image {
+    flex-basis: calc((100% - 60%) / 3);
+    border-radius: 1px;
+    border-color: #eee;
 }
 .image-caption b {
     font-weight: 700;
@@ -154,4 +188,8 @@ footer {
 .footer-contact:hover,
 .footer-contact:focus {
     color: var(--brand-color);
+}
+.section {
+    padding-top: 94px;
+    padding-bottom: 94px;
 }
