--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,10 @@ body {
     --secondary-text-color: #757575;
     --secondary-font: 'Raleway';
 }
+.container {
+    width: 1200px;
+    margin: 0 auto;
+}
 .logo {
     font-family: var(--secondary-font);
     font-weight: 700;
@@ -20,6 +24,7 @@ body {
     letter-spacing: 0.03em;
     margin: 25px;
     margin-right: 93px;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 .web-color1 {
     color: var(--brand-color);
@@ -65,7 +70,6 @@ body {
     line-height: 1.36;
     color: var(--negative-color);
     letter-spacing: 0.06em;
-    text-transform: uppercase;
 }
 .service-button {
     font-weight: 700;
@@ -125,7 +129,6 @@ body {
     letter-spacing: 0.03em;
     width: 72px;
 }
-
 .team-images span{
     font-size: 16px;
     line-height: 1.18;
