--- a/css/positioning.css
+++ b/css/positioning.css
@@ -8,7 +8,6 @@ header {
 .header-space {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
 }
 .navigations {
     margin: 32px 371px 32px 0px;
@@ -51,6 +50,7 @@ header {
     gap: 30px;
     max-width: 1170px;
     margin: 0 auto;
+    padding: 0;
 }
 .headlines {
     padding-bottom: 50px;
@@ -74,7 +74,7 @@ header {
     gap: 30px;
     padding:0;
     width: 1170px;
-    margin: 0;
+    margin: 0 auto;
 }
 .team-image-display {
     margin:0;
@@ -132,14 +132,22 @@ img {
 }
 footer {
     display: flex;
-    margin: 0px;
+    margin: 0 auto;
 }
 .footer-adress {
     display: flex;
     flex-direction: column;
     gap: 9px;
+    margin:0px 15px;
 }
 .bottom-logo {
-padding-top: 60px;
-padding-bottom: 20px;
+    font-family: var(--secondary-font);
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.19;
+    text-decoration: none;
+    letter-spacing: 0.03em;
+    display: flex;
+    margin: 60px 15px 20px 15px;
+    
 }
