--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,8 @@
 body {
         font-family: 'Roboto', sans-serif;
         color: #212121;
-        font-size: 14px
+        font-size: 14px;
+        width: 1600px;
     }
 
 :root {
@@ -75,7 +76,7 @@ body {
 .service-button {
     font-weight: 700;
     font-size: 16px;
-    line-height: 1.87;
+    line-height: 1.88;
     border: none;
     background-color: var(--brand-color);
     color: var(--negative-color);
